[package]
name        = "keymaker-lib"
version     = "0.1.0"
authors     = ["Cassius Hoff <cassiush@disroot.org>", "Theodore Huang <msa42@ctemplar.com>", "Alois Cochard <alois.cochard@gmail.com>"]
description = "GNU KeyMaker Library provides primitives to derive cryptographic credentials."
readme      = "README.md"
homepage    = "https://anongnu.github.io/keymaker"
repository  = "https://github.com/anongnu/keymaker"
license     = "GPL-3.0-or-later"
keywords    = ["security", "anonymity", "privacy", "passwords", "keys"]
categories  = ["authentication", "cryptography"]

[features]
default = ["crypto_rust"]
crypto_dumb = ["dumb-crypto"]
crypto_rust = ["scrypt"]

[dependencies.dumb-crypto]
optional = true
version = "3.1.0"

[dependencies.scrypt]
default-features = false
optional = true
version = "0.10.0"

